--- a/src/index.html
+++ b/src/index.html
@@ -12,10 +12,10 @@
     />
   </head>
   <body>
-    <form id="form">
-      <input type="text" id="input" />
+    <form>
+      <input type="text" id="js-input" />
     </form>
-    <div id="markup"></div>
+    <div id="js-country-container"></div>
     <!-- Скрипт идёт последним в разметке. В нём уже подключен главный SASS-файл. -->
     <script src="./index.js"></script>
   </body>
